src/css/style.css
@charset "UTF-8";

html.noscroll,
html.noscroll body {
    overflow-y: hidden;
}

.goodpopup {
    position: fixed;
    top: 0;
    bottom: 100%;
    left: 0;
    right: 0;
    margin: 0 auto;
    text-align: center;
    overflow: hidden;
    z-index: 9;
    opacity: 0;
    transition: opacity 0.25s ease, bottom 0.25s linear 0.25s;
}
.goodpopup_visible {
    bottom: 0;
    opacity: 1;
    transition: opacity 0.25s ease;
}
.goodpopup:before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: #000;
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAMAAAAoyzS7AAAAA1BMVEUAAACnej3aAAAAAXRSTlPM0jRW/QAAAApJREFUCNdjYAAAAAIAAeIhvDMAAAAASUVORK5CYII=) repeat 0 0\9; /* IE8 */
    opacity: 0.8;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.goodpopup-inner {
    height: 100%;
    font-size: 0;
    text-align: center;
    position: relative;
    overflow: auto;
}
.goodpopup-inner:after {
    content: '';
    display: inline-block;
    vertical-align: middle;
    height: 100%;
}
.goodpopup-inner-content {
    display: inline-block;
    vertical-align: middle;
    position: relative;
    font-size: 20px;
    margin: 50px 0;
    max-width: 90%;
    opacity: 0;
    transform: scale(0.7);
    transition: opacity 0.25s ease, transform 0.25s ease;
}
.goodpopup_visible .goodpopup-inner-content {
    opacity: 1;
    transform: scale(1);
    transition: opacity 0.25s ease, transform 0.25s ease;
}
.goodpopup-inner-content-element {
    opacity: 1;
    transform: scale(1);
    transition: opacity 0.25s ease, transform 0.25s ease;
}
.goodpopup-inner-content-element_hided {
    opacity: 0;
    transform: scale(0.7);
}
.goodpopup-inner-content-element_hidedfull {
    position: absolute;
    top: -99999px;
    left: -9999px;
    z-index: -1;
}
.goodpopup-inner-content-element_pseudohided {
    opacity: 0;
    transform: scale(0.7);
    transition: none;
}
.goodpopup-inner-content_destroyed,
.goodpopup_visible .goodpopup-inner-content_destroyed {
    opacity: 0;
    transform: scale(0.7);
    transition: opacity 0.25s ease, transform 0.25s ease;
}
.goodpopup-close {
    position: absolute;
    top: -21px;
    right: -27px;
    width: 26px;
    height: 26px;
    cursor: pointer;
    background: #fff;
    border-radius: 50%;
    line-height: 1.1;
}
.goodpopup-close-svg {
    vertical-align: middle;
    width: 12px;
    height: 12px;
}
.goodpopup-close-svg__path {
    fill: #000;
    transition: fill 0.2s ease;
}
.goodpopup-close:hover .goodpopup-close-svg__path {
    fill: #ff4500;
    transition: none;
}
.goodpopup-close__png {
    vertical-align: middle;
    width: 12px;
    height: 12px;
}

